--- a/llm/static_remote_LLM/requirements.txt
+++ b/llm/static_remote_LLM/requirements.txt
@@ -1,7 +1,9 @@
-fastapi
-langchain
-langchain-ollama
-langchain-community
-pandas
-uvicorn
-chromadb
+fastapi==0.104.1
+uvicorn==0.24.0
+pydantic==2.5.0
+langchain==0.0.349
+langchain-community==0.0.20
+langchain-ollama==0.1.0
+chromadb==0.4.22
+pandas==2.1.3
+python-multipart==0.0.6
